--- a/finance.html
+++ b/finance.html
@@ -67,6 +67,9 @@
 
     <main>
 
+        <a href="index.html">click to go back to home</a>
+
+
         <h2>Industry Overview</h2>
         <p>
             The finance industry focuses on managing money, investments, banking, and financial planning.
