--- a/index.html
+++ b/index.html
@@ -61,11 +61,18 @@
 <header>
     <h1>My Core Values</h1>
     <p>Personal Values and Ethics</p>
+    
 </header>
 
 <main>
 
     <img src="https://images.unsplash.com/photo-1521791136064-7986c2920216" alt="Core Values Image">
+    <a href="finance.html"> click for finance industry page</a>
+
+
+
+
+    
 
     <h2>Integrity</h2>
     <p>
